corrected spacing for markdown to be generated correctly via eleventy and added example style for the code view

--- a/docs/assets/stylesheets/components/_example.scss
+++ b/docs/assets/stylesheets/components/_example.scss
@@ -7,6 +7,10 @@
   border-right: 1px solid $govuk-border-colour;
   border-left: 1px solid $govuk-border-colour;
   background-color: govuk-colour("white");
+  &.app-example-borders {
+    border-bottom: 1px solid $govuk-border-colour;
+    border-top: 1px solid $govuk-border-colour;
+  }
 }
 
 .app-example__frame {
